# kalbee

./: README.md  TODO.md  pyproject.toml  setup.py
.agent/skills/state-estimation/: SKILL.md
.agent/workflows/: add-filter.md
.github/workflows/: ci.yml
docs/: filtering_logic.md  getting_started.md
kalbee/: __init__.py
kalbee/modules/filters/: __init__.py  abg_filter.py  auto_filter.py  base.py  ekf_filter.py  kf_filter.py  ukf_filter.py
tests/: test_abg.py  test_auto.py  test_ekf.py  test_kf.py  test_ukf.py
